# Simplistic-Heartbeat-Tracker

./: .env  .gitignore  Cargo.toml  LICENSE.txt  README.md
local/: postgres
migrations/2023-05-21-120943_heartbeat/: up.sql
src/: error.rs  main.rs  schema.rs
