[package]
name = "simplistic-heartbeat-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_with = { version = "3.0.0", features = ["time_0_3"] }
diesel = { version = "2.0.4", features = ["uuid", "time"] }
diesel-async = { version = "0.2.2", features = ["deadpool", "postgres"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
humantime = "2.1.0"
time = "0.3.21"
